--- a/Scripts/Rugosity_Sim.Rmd
+++ b/Scripts/Rugosity_Sim.Rmd
@@ -461,7 +461,7 @@ corr_df<- bind_rows(mutate(fine_corr_df, Scale= "Fine"), mutate(broad_corr_df, S
 ```
 
 
-The traditional standard deviation is the only method here that does not account for the effect of slope. As such, this method generally shows the highest magnitude rank correlation with slope. It had the the highest |𝜌| in `r corr_df %>% group_by(Complexity, Scale) %>% filter(abs(rho)==max(abs(rho))) %>% filter(Measure2=="SD") %>% nrow()` of the 8 scenarios, and  |𝜌| ≥ 0.8 in all cases except for one. The strength of this relationship increased with decreasing complexity and finer spatial scale. Additionally, the relationship between standard deviation and slope was always positive. VRM and SAPA however displayed substantial negative correlations in all of the simulated data sets with the |𝜌| ranging from `r corr_df %>% filter(Measure2=="VRM" & Complexity != "Real") %>% summarize(min=round(min(abs(rho)),3)) %>% pull(min)` - `r corr_df %>% filter(Measure2=="VRM" & Complexity != "Real") %>% summarize(max=round(max(abs(rho)),3)) %>% pull(max)` for VRM, and `r corr_df %>% filter(Measure2=="SAPA" & Complexity != "Real") %>% summarize(min=round(min(abs(rho)),3)) %>% pull(min)` - `r corr_df %>% filter(Measure2=="SAPA" & Complexity != "Real") %>% summarize(max=round(max(abs(rho)),3)) %>% pull(max)` for SAPA. Adjusted standard deviation performed best in `r corr_df %>% group_by(Complexity, Scale) %>% filter(abs(rho)==min(abs(rho))) %>% filter(Measure2=="AdjSD") %>% nrow()` of the 8 scenarios, and for all 6 of scenarios on the simulated data sets. For the simulated data sets, |𝜌| was near zero for this measure and |𝜌| > 0.1 in only `r corr_df %>% filter(Measure2=="AdjSD" & abs(rho) > 0.1 & Complexity!="Real") %>% nrow()` of the six scenarios. While SAPA and VRM did not perform as well as adjusted standard deviation in the simulated data, all slope corrected measures showed similar performance in the real world data sets with rank correlations of about 0.5 - 0.6.
+The traditional standard deviation is the only method here that does not account for the effect of slope. As such, this method generally shows the highest magnitude rank correlation with slope. It had the the highest |𝜌| in `r corr_df %>% group_by(Complexity, Scale) %>% filter(abs(rho)==max(abs(rho))) %>% filter(Measure2=="SD") %>% nrow()` of the 8 scenarios, and  |𝜌| ≥ 0.8 in all cases except for one. The strength of this relationship increased with decreasing complexity and finer spatial scale. Additionally, the relationship between standard deviation and slope was always positive. VRM and SAPA however displayed substantial negative correlations in all of the simulated data sets with the |𝜌| ranging from `r corr_df %>% filter(Measure2=="VRM" & Complexity != "Real") %>% summarize(min=round(min(abs(rho)),3)) %>% pull(min)` - `r corr_df %>% filter(Measure2=="VRM" & Complexity != "Real") %>% summarize(max=round(max(abs(rho)),3)) %>% pull(max)` for VRM, and `r corr_df %>% filter(Measure2=="SAPA" & Complexity != "Real") %>% summarize(min=round(min(abs(rho)),3)) %>% pull(min)` - `r corr_df %>% filter(Measure2=="SAPA" & Complexity != "Real") %>% summarize(max=round(max(abs(rho)),3)) %>% pull(max)` for SAPA. Adjusted standard deviation performed best in `r corr_df %>% group_by(Complexity, Scale) %>% filter(abs(rho)==min(abs(rho))) %>% filter(Measure2=="AdjSD") %>% nrow()` of the 8 scenarios, and for all 6 of scenarios on the simulated data sets. For the simulated data sets, |𝜌| was often close to zero for this measure and |𝜌| > 0.1 in only `r corr_df %>% filter(Measure2=="AdjSD" & abs(rho) > 0.1 & Complexity!="Real") %>% nrow()` of the six scenarios. While SAPA and VRM did not perform as well as adjusted standard deviation in the simulated data, all slope corrected measures showed similar performance in the real world data sets with rank correlations of about 0.5 - 0.6.
 
 # Conclusions
 - When slope is unaccounted for, rugosity measures are highly confounded with slope particularly for lower complexity areas and finer scale analyses.
